[gd_scene load_steps=2 format=3 uid="uid://dtl4ng6xwlm8k"]

[ext_resource type="Script" path="res://scripts/ui/game_selection_menu.gd" id="1_k8x9l"]

[node name="GameSelectionMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_k8x9l")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.2, 0.1, 1)
mouse_filter = 2

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 80.0
offset_right = 200.0
offset_bottom = 130.0
text = "üéÆ SELECT GAME MODE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(300, 0)

[node name="CampaignButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "üè∞ Campaign Mode"
tooltip_text = "Coming Soon - Follow the story of the ant colony through multiple scenarios"

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="SkirmishButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "‚öîÔ∏è Skirmish Mode"
tooltip_text = "Quick battle - Manage your colony and compete for territory"

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "‚Üê Back to Main Menu"

[connection signal="pressed" from="CenterContainer/VBoxContainer/CampaignButton" to="." method="_on_campaign_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/SkirmishButton" to="." method="_on_skirmish_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
